--- a/style.css
+++ b/style.css
@@ -21,3 +21,68 @@ img {
 body {
   font-family: "Rubik", sans-serif;
 }
+
+.header {
+  background: url(./images/pattern-bg-desktop.png) no-repeat center center/cover;
+  width: 100vw;
+  height: 290px;
+  padding: 2rem 0;
+}
+
+.header-title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+.input-ip {
+  position: relative;
+  width: 100%;
+  max-width: 550px;
+  padding: 1.2rem 1rem;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+}
+
+.input-ip[placeholder] {
+  font-family: "Rubik", sans-serif;
+  text-transform: uppercase;
+  color: var(--dark-gray);
+  font-size: 1rem;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 15px 15px 0;
+  cursor: pointer;
+  background-color: var(--very-dark-gray);
+  border: none;
+  margin-left: -40px;
+  width: 60px;
+  height: 57px;
+  z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .header {
+    background: url(./images/pattern-bg-mobile.png) no-repeat center
+      center/cover;
+    height: 240px;
+    padding: 3rem;
+  }
+
+  .header-title {
+    font-size: 2rem;
+  }
+}
