--- a/style.css
+++ b/style.css
@@ -72,6 +72,74 @@ body {
   right: 0;
   width: 60px;
   height: 51px;
+  transition: 0.4s ease;
+}
+
+.btn:hover {
+  background-color: #555;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  visibility: hidden;
+}
+
+.main-section {
+  display: flex;
+  justify-content: flex-start;
+  padding: 2rem 2rem;
+  border-radius: 10px;
+  margin-top: -3em;
+  background-color: #fff;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  padding: 0 5rem 0 1rem;
+}
+
+.divider {
+  height: 100%;
+  width: 1px;
+  background-color: var(--dark-gray);
+  display: block;
+}
+
+.span {
+  color: var(--dark-gray);
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.section-info {
+  font-size: 1.5rem;
+  font-weight: bold;
+  max-width: 10ch;
+}
+
+.timezone {
+  word-wrap: break-word;
+}
+
+.slideIn {
+  transform: translateY(-100%);
+  opacity: 0;
+  animation: slide 0.6s forwards;
+}
+
+@keyframes slide {
+  to {
+    transform: rotateY(0);
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+#map {
+  height: 550px;
 }
 
 @media (max-width: 768px) {
@@ -88,5 +156,22 @@ body {
 
   .btn {
     height: 51px;
+  }
+
+  .main-section {
+    flex-direction: column;
+  }
+
+  .section {
+    text-align: center;
+    padding: 0 3rem;
+  }
+
+  .divider {
+    display: none;
+  }
+
+  .mobile {
+    margin-bottom: 4rem;
   }
 }
